Provide support for TWS/Gateway v1048 and later